sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: '(' expected but identifier found.
      if plusPetit(i+1:Int,i:Int) {
         ^AlgBubbleSort1:11: error: illegal start of simple expression
    }
    ^